style(ChatButton): fix icon misalignment

--- a/packages/styles/scss/components/chat-button/_chat-button.scss
+++ b/packages/styles/scss/components/chat-button/_chat-button.scss
@@ -26,6 +26,7 @@
 
   // Quick action button
   .#{$prefix}--chat-btn--quick-action {
+    align-items: center;
     border: 1px solid $link-primary;
   }
 
